--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Steam Name Changer!</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./index.js" ></script>
-    <script src="./view.js" ></script>
+    <script src="../js/index.js" ></script>
+    <script src="../js/view.js" ></script>
   </head>
   <body onresize="resize_to_window('left_region')">
     <div class="main_area">
